ホーム画面の実装

--- a/src/main/resources/templates/home/homeLayout.html
+++ b/src/main/resources/templates/home/homeLayout.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">SpringSample</a>
+                <a class="navbar-brand" href="#">寺務管理アプリケーション</a>
             </div>
             <form method="post" th:action="@{/logout}">
                 <button class="btn btn-link pull-right navbar-brand" type="submit">
@@ -35,7 +35,7 @@
             <div class="col-sm-2 sidebar">
                 <ul class="nav nav-pills nav-stacked">
                     <li role="presentation">
-                        <a th:href="@{'/userList'}">ユーザ管理</a>
+                        <a th:href="@{''}">檀徒管理</a>
                     </li>
                 </ul>
             </div>
