ログイン画面・サインアップ画面の作成

--- a/src/main/resources/templates/home/homeLayout.html
+++ b/src/main/resources/templates/home/homeLayout.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">寺務管理アプリケーション</a>
+                <div class="navbar-brand">寺務管理アプリケーション</div>
             </div>
             <form method="post" th:action="@{/logout}">
                 <button class="btn btn-link pull-right navbar-brand" type="submit">
