ログイン画面から新規登録画面への遷移の実装

--- a/src/main/resources/templates/register/login.html
+++ b/src/main/resources/templates/register/login.html
@@ -11,7 +11,7 @@
     <title>Login</title>
 </head>
 <body class="text-center">
-    <h1>Login</h1>
+    <h1>ログイン画面</h1>
     <form method="post" action="/login">
         <!-- ユーザーID -->
         <label>ユーザーID</label>
