--- a/src/main/resources/templates/register/login.html
+++ b/src/main/resources/templates/register/login.html
@@ -14,7 +14,7 @@
     <h1>ログイン画面</h1>
     <form method="post" action="/login">
         <!-- ユーザーID -->
-        <label>ユーザーID</label>
+        <label>寺院ID</label>
         <input type="text" /><br/>
         <br />
         <!-- パスワード -->
@@ -26,6 +26,6 @@
     </form>
     <br />
     <!-- ユーザー登録画面へのリンク -->
-    <a th:href="@{'/signup'}">ユーザー新規登録はこちら</a>
+    <a th:href="@{'/signup'}">新規登録はこちら</a>
 </body>
 </html>
