--- a/src/main/resources/templates/register/login.html
+++ b/src/main/resources/templates/register/login.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8"></meta>
+<meta charset="UTF-8"></meta>
 
-    <!-- Bootstrapの設定 -->
-    <link th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" rel="stylesheet"></link>
-    <script th:src="@{/webjars/jquery/1.11.1/jquery.min.js}"></script>
-    <script th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
+<!-- Bootstrapの設定 -->
+<link th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}"
+	rel="stylesheet"></link>
+<script th:src="@{/webjars/jquery/1.11.1/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
 
-    <title>Login</title>
+<title>Login</title>
 </head>
 <body class="text-center">
-    <h1>ログイン画面</h1>
-    <form method="post" action="/login">
-        <!-- ユーザーID -->
-        <label>寺院ID</label>
-        <input type="text" /><br/>
-        <br />
-        <!-- パスワード -->
-        <label>パスワード</label>
-        <input type="password" /><br/>
-        <br />
-        <!-- ログインボタン -->
-        <button class="btn btn-primary" type="submit">ログイン</button>
-    </form>
-    <br />
-    <!-- ユーザー登録画面へのリンク -->
-    <a th:href="@{'/signup'}">新規登録はこちら</a>
+	<h1>ログイン画面</h1>
+	<form method="post" action="/login">
+		<h3 style="color: blue;" th:text="${success}"></h3>
+		<!-- ユーザーID -->
+		<label>寺院ID</label> <input type="text" /><br /> <br />
+		<!-- パスワード -->
+		<label>パスワード</label> <input type="password" /><br /> <br />
+		<!-- ログインボタン -->
+		<button class="btn btn-primary" type="submit">ログイン</button>
+	</form>
+	<br />
+	<!-- ユーザー登録画面へのリンク -->
+	<a th:href="@{'/signup'}">新規登録はこちら</a>
 </body>
 </html>
