--- a/src/main/resources/templates/register/signup.html
+++ b/src/main/resources/templates/register/signup.html
@@ -15,8 +15,9 @@
         <div class="page-header">
             <h1>寺院登録画面</h1>
         </div>
+        <h3 style="color: red;" th:text="${failed}"></h3>
         <!-- th:object  Modelに登録されているオブジェクトの受け取り。　th:object="${<ModdelAttributeのキー名>}"-->
-        <form method="post" th:action="@{/signup}" th:object="${signupForm}"> 
+        <form method="post" th:action="@{/signup}" th:object="${templeForm}"> 
             <table class="table table-bordered table-hover">
                 
                 <tr>
@@ -33,7 +34,6 @@
                     <th class="active">パスワード(8ケタ以上、32桁未満で入力してください)</th>
                     <td>
                         <div class="form-group" th:classappend="${#fields.hasErrors('password')}?'has-error'">
-                            <!-- th:classappend="${#fields.hasErrors('password')} ? 'has-error'" -->
                             <input type="text" class="form-control" th:field="*{password}"/>    
                             <span class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">パスワードエラー</span>                    
                         </div>
