認証機能の実装

--- a/src/main/resources/templates/home/homeLayout.html
+++ b/src/main/resources/templates/home/homeLayout.html
@@ -37,10 +37,17 @@
                     <li role="presentation">
                         <a th:href="@{''}">檀徒管理</a>
                     </li>
+                    
+                    <li role="presentation">
+                        <a th:href="@{''}">登録寺院一覧</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </div>
+    
+     
+                
     <!-- ===== コンテンツ ===== -->
     <div class="container-fluid">
         <div class="row">
