--- a/src/main/resources/templates/register/login.html
+++ b/src/main/resources/templates/register/login.html
@@ -13,17 +13,22 @@
 </head>
 <body class="text-center">
 	<h1>ログイン画面</h1>
-	<form method="post" action="/login">
+	<form method="post" th:action="@{/login}">
+		<p th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']} != null" 
+		th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}" class="text-danger">ログインエラーメッセージ</p>
 		<h3 style="color: blue;" th:text="${success}"></h3>
-		<!-- ユーザーID -->
-		<label>寺院ID</label> <input type="text" /><br /> <br />
-		<!-- パスワード -->
-		<label>パスワード</label> <input type="password" /><br /> <br />
-		<!-- ログインボタン -->
+		
+		<label>寺院ID</label> <input type="text" name="templeId"/><br /> <br />
+		
+		<label>パスワード</label> <input type="password" name="password"/><br /> <br />
+		
+		<!--  CSRF対策用トークン -->
+		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+		
 		<button class="btn btn-primary" type="submit">ログイン</button>
 	</form>
 	<br />
-	<!-- ユーザー登録画面へのリンク -->
+	
 	<a th:href="@{'/signup'}">新規登録はこちら</a>
 </body>
 </html>
