--- a/src/main/resources/templates/home/homeLayout.html
+++ b/src/main/resources/templates/home/homeLayout.html
@@ -41,7 +41,7 @@
                         <a th:href="@{''}">檀徒情報登録</a>
                     </li>
                     <li role="presentation">
-                        <a th:href="@{''}">檀徒一覧</a>
+                        <a th:href="@{'supporter/supporterList'}">檀徒一覧</a>
                     </li>
                     <li role="presentation">
                         <a th:href="@{''}">お参り日時検索</a>
