コードの微調整

--- a/src/main/resources/templates/home/homeLayout.html
+++ b/src/main/resources/templates/home/homeLayout.html
@@ -35,13 +35,13 @@
             <div class="col-sm-2 sidebar">
                 <ul class="nav nav-pills nav-stacked">
                     <li role="presentation">
-                        <a th:href="@{'admin/temples/templeList'}">登録寺院一覧</a>
+                        <a th:href="@{'/templeList'}">登録寺院一覧</a>
                     </li>
                     <li role="presentation">
-                        <a th:href="@{''}">檀徒情報登録</a>
+                        <a th:href="@{'/supporterList'}">檀徒一覧</a>
                     </li>
                     <li role="presentation">
-                        <a th:href="@{'supporter/supporterList'}">檀徒一覧</a>
+                        <a th:href="@{'/supporterInsert'}">檀徒情報登録</a>
                     </li>
                     <li role="presentation">
                         <a th:href="@{''}">お参り日時検索</a>
