--- a/src/main/resources/templates/register/login.html
+++ b/src/main/resources/templates/register/login.html
@@ -16,7 +16,7 @@
 	<form method="post" th:action="@{/login}">
 		<p th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']} != null" 
 		th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}" class="text-danger">ログインエラーメッセージ</p>
-		<h3 style="color: blue;" th:text="${success}"></h3>
+		<!-- <h3 style="color: blue;" th:text="${success}"></h3> -->
 		
 		<label>寺院ID</label> <input type="text" name="templeId"/><br /> <br />
 		
