檀徒情報登録機能の実装

--- a/src/main/resources/templates/supporter/supporterList.html
+++ b/src/main/resources/templates/supporter/supporterList.html
@@ -3,6 +3,7 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta charset="UTF-8"></meta>
+<title>Supporters</title>
 </head>
 <body>
 	<!-- コンテンツ部分 -->
