--- a/src/main/resources/templates/home/homeLayout.html
+++ b/src/main/resources/templates/home/homeLayout.html
@@ -27,6 +27,7 @@
                     ログアウト
                 </button>
             </form>
+            <p th:text="${temple}"></p>
         </div>
     </nav>
     <!-- ===== サイドバー ===== -->
@@ -51,10 +52,7 @@
                 </ul>
             </div>
         </div>
-    </div>
-    
-     
-                
+    </div>           
     <!-- ===== コンテンツ ===== -->
     <div class="container-fluid">
         <div class="row">
