--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -10,6 +10,7 @@
         <div class="page-header">
             <h1>ホーム</h1>
         </div>
+            <p th:text="${temple}"></p>
     </div>
 </body>
 </html>
