お参り一覧の表示

--- a/src/main/resources/templates/home/homeLayout.html
+++ b/src/main/resources/templates/home/homeLayout.html
@@ -41,10 +41,8 @@
                         <a th:href="@{'/supporterInsert'}">檀徒情報登録</a>
                     </li>
                     <li role="presentation">
-                        <a th:href="@{''}">お参り日時検索</a>
+                        <a th:href="@{'/schedule'}">お参り一覧</a>
                     </li>
-                    
-                    
                 </ul>
             </div>
         </div>
