--- a/src/main/resources/templates/supporter/supporterList.html
+++ b/src/main/resources/templates/supporter/supporterList.html
@@ -9,17 +9,17 @@
 	<!-- コンテンツ部分 -->
 	<div th:fragment="supporterList_contents">
 		<div class="page-header">
-			<h1>檀徒一覧</h1>
+			<h1 th:text="#{supporterList}">檀徒一覧</h1>
 		</div>
 		<table class="table table-bordered table-hover table-striped">
 			<tr>
-				<th class="info col-sm-2">ID</th>
-				<th class="info col-sm-2">檀徒氏名</th>
-				<th class="info col-sm-2">施主名</th>
-				<th class="info col-sm-2">郵便番号</th>
-				<th class="info col-sm-2">住所</th>
-				<th class="info col-sm-2">電話番号</th>
-				<th class="info col-sm-2">メールアドレス</th>
+				<th class="info col-sm-2" th:text="#{supporterId}">ID</th>
+				<th class="info col-sm-2" th:text="#{supporterName}">檀徒氏名</th>
+				<th class="info col-sm-2" th:text="#{ownerName}">施主名</th>
+				<th class="info col-sm-2" th:text="#{postalcode}">郵便番号</th>
+				<th class="info col-sm-2" th:text="#{adress}">住所</th>
+				<th class="info col-sm-2" th:text="#{phoneNumber}">電話番号</th>
+				<th class="info col-sm-2" th:text="#{email}">メールアドレス</th>
 			</tr>
 			<tr th:each="supporter : ${supporterList}">
 				<td th:text="${supporter.supporterId}"></td>
