お参りの予定登録機能の実装

--- a/src/main/resources/templates/home/homeLayout.html
+++ b/src/main/resources/templates/home/homeLayout.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <!-- ===== ヘッダー（ナビゲーションバー） =====  -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color:#007bbb;">
         <div class="container-fluid">
             <div class="navbar-header">
                 <div class="navbar-brand">寺務管理アプリケーション</div>
