--- a/src/main/resources/templates/worship/worshipList.html
+++ b/src/main/resources/templates/worship/worshipList.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
+<script th:src="@{/webjars/jquery/1.11.1/jquery.min.js}"></script>
 <meta charset="UTF-8"></meta>
 <title>WorshipList</title>
 </head>
@@ -17,14 +18,59 @@
 				<th class="info col-sm-2" th:text="#{worship}">お参り</th>
 				<th class="info col-sm-2" th:text="#{schedule}">日時</th>
 				<th class="info col-sm-2" th:text="#{remark}">備考</th>
+				<th class="info col-sm-2" th:text="#{done}">完了チェック</th>
 			</tr>
 			<tr th:each="worship : ${worshipList}" th:object="${worship}">
 				<td th:text="*{supporterName}"></td>
 				<td th:text="*{worshipOpts.label}"></td>
 				<td th:text="*{schedule}"></td>
 				<td th:text="*{remark}"></td>
+				<td>
+					<button 
+						class="btn btn-warning"
+						th:style="'display:' + (${worship.progress} ? 'none' : '')"
+						th:onclick="|complete(this, '*{worshipId}',true)|"
+						th:text="#{incomplete}">未完了</button>
+					<button 
+						class="btn btn-secondary"
+						th:style="'display:' + (${worship.progress} ? '' : 'none')"
+						th:onclick="|complete(this, '*{worshipId}',false)|"
+						th:text="#{complete}">完了</button>		
+				</td>
 			</tr>
 		</table>
 	</div>
+	
+	<script type="text/javascript">
+
+    function complete(element, worshipId, doComplete) {
+
+      const token = document.querySelector("meta[name='_csrf']").attributes['content'].value;
+      const header = document.querySelector(
+          "meta[name='_csrf_header']").attributes['content'].value;
+
+      let url =  doSubscript ? "/complete" : "/incomplete";
+      fetch(url, {
+        method: 'POST',
+        headers: {
+          "Content-Type": 'application/x-www-form-urlencoded',
+          [header]: token
+        },
+        body: `worshipId=${worshipId}`
+      }).then(
+    		  response => {
+    	            if (doComplete) {
+    	            	element.style.display = 'none';
+    	                element.nextElementSibling.style.display = '';
+    	            } else {
+    	            	element.style.display = 'none';
+    	            	element.previousElementSibling.style.display = '';
+    	            }
+    	          }
+      );
+    }
+
+  </script>
+
 </body>
 </html>
