--- a/src/main/resources/templates/home/homeLayout.html
+++ b/src/main/resources/templates/home/homeLayout.html
@@ -1,60 +1,63 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
-    <meta charset="UTF-8"></meta>
+<meta charset="UTF-8"></meta>
+  <meta
+        name="_csrf"
+        th:content="${_csrf.token}"/>
+    <meta
+        name="_csrf_header"
+        th:content="${_csrf.headerName}"/>
+<!-- Bootstrapの設定 -->
+<link th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}"
+	rel="stylesheet"></link>
+<script th:src="@{/webjars/jquery/1.11.1/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
 
-    <!-- Bootstrapの設定 -->
-    <link th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" rel="stylesheet"></link>
-    <script th:src="@{/webjars/jquery/1.11.1/jquery.min.js}"></script>
-    <script th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
+<!-- CSSの読込 -->
+<link th:href="@{/css/home.css}" rel="stylesheet"></link>
 
-    <!-- CSSの読込 -->
-    <link th:href="@{/css/home.css}" rel="stylesheet"></link>
-
-    <title>Home</title>
+<title>Home</title>
 </head>
 <body>
-    <!-- ===== ヘッダー（ナビゲーションバー） =====  -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color:#007bbb;">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <div class="navbar-brand">寺務管理アプリケーション</div>
-            </div>
-            <form method="post" th:action="@{/logout}">
-                <button class="btn btn-link pull-right navbar-brand" type="submit">
-                    ログアウト
-                </button>
-            </form>
-        </div>
-    </nav>
-    <!-- ===== サイドバー ===== -->
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-2 sidebar">
-                <ul class="nav nav-pills nav-stacked">
-                    <li role="presentation">
-                        <a th:href="@{'/supporterList'}">檀徒一覧</a>
-                    </li>
-                    <li role="presentation">
-                        <a th:href="@{'/supporterInsert'}">檀徒情報登録</a>
-                    </li>
-                    <li role="presentation">
-                        <a th:href="@{'/schedule'}">お参り一覧</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>           
-    <!-- ===== コンテンツ ===== -->
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-10 col-sm-offset-2 main">
-            <!--  template画面で必要 th:include="<ファイルパス名> :: <th:fragment属性の値>”　動的ページを表示させるには、プリプロセッシングを使う-->
-                <div th:include="__${contents}__"></div>
-            </div>
-        </div>
-    </div>
+	<!-- ===== ヘッダー（ナビゲーションバー） =====  -->
+	<nav class="navbar navbar-inverse navbar-fixed-top"
+		style="background-color: #007bbb;">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<div class="navbar-brand">寺務管理アプリケーション</div>
+			</div>
+			<form method="post" th:action="@{/logout}">
+				<button class="btn btn-link pull-right navbar-brand" type="submit">
+					ログアウト</button>
+			</form>
+		</div>
+	</nav>
+	<!-- ===== サイドバー ===== -->
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-2 sidebar">
+				<ul class="nav nav-pills nav-stacked">
+					<li role="presentation"><a th:href="@{'/supporterList'}">檀徒一覧</a>
+					</li>
+					<li role="presentation"><a th:href="@{'/supporterInsert'}">檀徒情報登録</a>
+					</li>
+					<li role="presentation"><a th:href="@{'/schedule'}">お参り一覧</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<!-- ===== コンテンツ ===== -->
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-10 col-sm-offset-2 main">
+				<!--  template画面で必要 th:include="<ファイルパス名> :: <th:fragment属性の値>”　動的ページを表示させるには、プリプロセッシングを使う-->
+				<div th:include="__${contents}__"></div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
