状態の修正

--- a/src/main/resources/templates/worship/worshipList.html
+++ b/src/main/resources/templates/worship/worshipList.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{layout/layout}">
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <script th:src="@{/webjars/jquery/1.11.1/jquery.min.js}"></script>
 <meta charset="UTF-8"></meta>
-  <meta
-        name="_csrf"
-        th:content="${_csrf.token}"/>
-    <meta
-        name="_csrf_header"
-        th:content="${_csrf.headerName}"/>
+ 
 <title>WorshipList</title>
 </head>
 <body>
@@ -32,20 +26,11 @@
 				<td th:text="*{worshipOpts.label}"></td>
 				<td th:text="*{schedule}"></td>
 				<td th:text="*{remark}"></td>
-				<td>
-					<button class="btn btn-warning"
-						th:style="'display:' + (${worship.progress} ? 'none' : '')"
-						th:onclick="|complete(this, '*{worshipId}',true)|"
-						th:text="#{incomplete}">未完了</button>
-					<button class="btn btn-secondary"
-						th:style="'display:' + (${worship.progress} ? '' : 'none')"
-						th:onclick="|complete(this, '*{worshipId}',false)|"
-						th:text="#{complete}">完了</button>
-				</td>
+				
 			</tr>
 		</table>
 
-		
+
 	</div>
 </body>
 </html>
